# dune-localfunctions

./: .gitlab-ci.yml  CMakeLists.txt
dune/localfunctions/: CMakeLists.txt  lobatto.hh
dune/localfunctions/common/: CMakeLists.txt  derivative.hh  localfiniteelementvariant.hh  virtualinterface.hh
dune/localfunctions/lobatto/: CMakeLists.txt  common.hh  cube.hh  generate.py  geometry.hh  interpolation.hh  line.hh  lobatto.hh  lobatto1d.hh  lobattocube.hh  lobattoorders.hh  lobattosimplex.hh  orders.hh  orientation.hh  simplex.hh
dune/localfunctions/test/: CMakeLists.txt  test-lobatto.cc  test-lobattoOnSimplex.cc  test-lobattocube.cc  test-lobattosimplex.cc  test-localfe.hh
python/: CMakeLists.txt  setup.py.in
